--- a/environment.yml
+++ b/environment.yml
@@ -64,7 +64,57 @@ dependencies:
   - libexpat=2.7.1=hecca717_0
   - libffi=3.4.6=h2dba641_1
   - libfreetype=2.14.1=ha770c72_0
-  - libfreetype6=2.14.1=h73754d4_0
+  - libfreetype6=2.14.1=h73754name: torch
+channels:
+  - conda-forge
+dependencies:
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - alsa-lib=1.2.14=hb9d3cd8_0
+  - asttokens=3.0.0=pyhd8ed1ab_1
+  - brotli=1.1.0=hb03c661_4
+  - brotli-bin=1.1.0=hb03c661_4
+  - bzip2=1.0.8=hda65f42_8
+  - ca-certificates=2025.8.3=hbd8a1cb_0
+  - cairo=1.18.4=h3394656_0
+  - cloudpickle=3.1.1=pyhd8ed1ab_0
+  - comm=0.2.3=pyhe01879c_0
+  - contourpy=1.3.2=py310h3788b33_0
+  - cycler=0.12.1=pyhd8ed1ab_1
+  - cyrus-sasl=2.1.28=hd9c7081_0
+  - dbus=1.16.2=h3c4dab8_0
+  - debugpy=1.8.17=py310h25320af_0
+  - decorator=5.2.1=pyhd8ed1ab_0
+  - double-conversion=3.3.1=h5888daf_0
+  - exceptiongroup=1.3.0=pyhd8ed1ab_0
+  - executing=2.2.1=pyhd8ed1ab_0
+  - farama-notifications=0.0.4=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.15.0=h7e30c49_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.60.1=py310h3406613_0
+  - freetype=2.14.1=ha770c72_0
+  - graphite2=1.3.14=hecca717_2
+  - gymnasium=1.2.1=np2py310hf455f1b_0
+  - harfbuzz=12.1.0=h15599e2_0
+  - icu=75.1=he02047a_0
+  - importlib-metadata=8.7.0=pyhe01879c_1
+  - ipykernel=6.30.1=pyh82676e8_0
+  - ipython=8.37.0=pyh8f84b5b_0
+  - jax-jumpy=1.0.0=pyhd8ed1ab_1
+  - jedi=0.19.2=pyhd8ed1ab_1
+  - jupyter_client=8.6.3=pyhd8ed1ab_1
+  - jupyter_core=5.8.1=pyh31011fe_0
+  - keyutils=1.6.3=hb9d3cd8_0
+  - kiwisolver=1.4.9=py310haaf941d_1
+  - krb5=1.21.3=h659f571_0
+  - lcms2=2.17=h717163a_0
+  - ld_impl_linux-64=2.44=ha97dd6f_2
+  - lerc=4.0.0=h0aef613_1d4_0
   - libgcc=15.1.0=h767d61c_5
   - libgcc-ng=15.1.0=h69a702a_5
   - libgfortran=15.1.0=h69a702a_5
